<resources>
    <string name="app_name">Torneos de Ajedrez</string>
    <string name="navigation_drawer_open">Abrir navigation drawer</string>
    <string name="navigation_drawer_close">Cerrar navigation drawer</string>
    <string name="nav_header_title">Torneos de Ajedrez</string>
    <string name="nav_header_desc">Navigación</string>
    <string name="action_settings">Configuración</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_torneos">Torneos</string>
    <string name="menu_jugadores">Jugadores</string>
    <string name="menu_inscripciones">Inscripciones</string>
    <string name="menu_mapa">Mapa interactivo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inscribirse">Inscribirse</string>
    <string name="ver_partidas">Ver Partidas</string>
    <string name="detalle_torneo">Detalle Torneo</string>
    <string name="estrella">Estrella</string>
    <string name="filtro">Filtro</string>
    <string name="title_activity_login">Torneos de Ajedrez</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="action_sign_in">Ingresar o registrarse</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="welcome">"¡Bienvenido!"</string>
    <string name="invalid_username">Formato de correo no válido</string>
    <string name="invalid_password">La contraseña debe tener al menos 8 caracteres e incluir una mayúscula, una minúscula y un número</string>
    <string name="login_failed">"Inicio de sesión fallido"</string>
    <string name="click_to_register">No tengo cuenta</string>
    <string name="full_name">Nombre completo</string>
    <string name="password_confirm">Confirmar contraseña</string>
    <string name="already_have_account">Ya tengo cuenta</string>
    <string name="action_register">Registrar</string>
    <string name="create_account">Crear cuenta</string>

    <string name="invalid_full_name">Ingrese nombre completo</string>
    <string name="invalid_email">Correo inválido</string>
    <string name="passwords_not_match">Las contraseñas no coinciden</string>
    <string name="login_with_google">Ingresar con Google </string>

    <string name="google_sign_in">Ingresar con Google </string>
    <string name="ingresar_con_google">Ingresar con Google</string>
    <string name="sign_in">Iniciar sesión</string>

<!--Acceso usando Google -->
    <string name="default_web_client_id">1017845911463-0h4dsuc7ga13ss11oevk70715f65gn0u.apps.googleusercontent.com</string>
</resources>