<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_torneos"
            android:icon="@drawable/ic_trofeo"
            android:title="@string/menu_torneos" />
        <item
            android:id="@+id/nav_jugadores"
            android:icon="@drawable/ic_jugador"
            android:title="@string/menu_jugadores" />
        <item
            android:id="@+id/nav_inscripciones"
            android:icon="@drawable/ic_lapiz"
            android:title="@string/menu_inscripciones" />
        <item
            android:id="@+id/nav_mapa"
            android:icon="@drawable/ic_image"
            android:title="@string/menu_mapa" />
    </group>
</menu>