<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.apptorneosajedrez.ui.home.HomeFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_torneos"
        android:name="com.example.apptorneosajedrez.ui.torneos.TorneosFragment"
        android:label="@string/menu_torneos"
        tools:layout="@layout/fragment_torneos" />

    <fragment
        android:id="@+id/nav_jugadores"
        android:name="com.example.apptorneosajedrez.ui.jugadores.JugadoresFragment"
        android:label="@string/menu_jugadores"
        tools:layout="@layout/fragment_jugadores" />

    <fragment
        android:id="@+id/nav_inscripciones"
        android:name="com.example.apptorneosajedrez.ui.inscripciones.InscripcionesFragment"
        android:label="@string/menu_inscripciones"
        tools:layout="@layout/fragment_inscripciones" />

</navigation>